# ChangeLog for app-crypt/mit-krb5
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/mit-krb5/ChangeLog,v 1.161 2007/09/07 06:03:15 seemant Exp $

  07 Sep 2007; Seemant Kulleen <seemant@gentoo.org>
  -mit-krb5-1.5.2-r1.ebuild, -mit-krb5-1.5.2-r2.ebuild,
  -mit-krb5-1.5.2-r3.ebuild:
  remove crufty versions

  01 Sep 2007; Ryan Hill <dirtyepic@gentoo.org> ChangeLog, Manifest:
  Fix lost ChangeLog history.

  16 Jul 2007; Markus Rothe <corsair@gentoo.org> mit-krb5-1.5.3.ebuild:
  Stable on ppc64; bug #183338

  16 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org> mit-krb5-1.5.3.ebuild:
  Stable on sparc wrt security #183338

  16 Jul 2007; Jeroen Roovers <jer@gentoo.org> mit-krb5-1.5.2-r3.ebuild:
  Stable for HPPA (bug #183338).

  16 Jul 2007; Jeroen Roovers <jer@gentoo.org> mit-krb5-1.5.3.ebuild:
  Stable for HPPA (bug #183338).

  15 Jul 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  mit-krb5-1.5.3.ebuild:
  ppc stable, bug #183338

  15 Jul 2007; Steve Dibb <beandog@gentoo.org> mit-krb5-1.5.2-r3.ebuild,
  mit-krb5-1.5.3.ebuild:
  amd64 stable, security bug 183338

  15 Jul 2007; Raúl Porcel <armin76@gentoo.org> mit-krb5-1.5.3.ebuild:
  alpha/ia64/x86 stable wrt security #183338

*mit-krb5-1.5.3 (03 Jul 2007)

  03 Jul 2007; Seemant Kulleen <seemant@gentoo.org> +mit-krb5-1.5.3.ebuild:
  version bump + the same two security fixes as for 1.5.2-r3. This solves bug
  #183338

*mit-krb5-1.5.2-r3 (03 Jul 2007)

  03 Jul 2007; Seemant Kulleen <seemant@gentoo.org>
  +mit-krb5-1.5.2-r3.ebuild:
  security fixes for security advisories 004 and 005.

  13 May 2007; Joshua Kinard <kumba@gentoo.org> mit-krb5-1.5.2-r1.ebuild:
  Stable on mips.

  04 Apr 2007; Seemant Kulleen <seemant@gentoo.org>
  -files/mit-krb5-1.4.3-setuid.patch,
  -files/mit-krb5-SA-2007-001-telnetd.patch,
  -files/mit-krb5-SA-2007-002-syslog.patch,
  -files/mit-krb5-SA-2007-003.patch, -files/mit-krb5-pthreads.patch,