@@ -10,29 +10,28 @@ AUX mit-krb5kdc.initd 656 RMD160 8c4c508273f9d715ac0e0a8d9c54e36f63526b9b SHA1 6
 MD5 c214030264300e2d84375d23d7c1f892 files/mit-krb5kdc.initd 656
 RMD160 8c4c508273f9d715ac0e0a8d9c54e36f63526b9b files/mit-krb5kdc.initd 656
 SHA256 d813dbf3ee89f0da6b73455fd8759898223529c4cf7c1c2ec64a3128363194e2 files/mit-krb5kdc.initd 656
-DIST krb5-1.4.3-signed.tar 7290880 RMD160 838425b59bf37da69c927eb346be78d059fa6db7 SHA1 94bd12d664b1ef32bbf5b8ffe062fe473909f9a7 SHA256 86f246877cc912ae6a82b6bb16217e54ec31fe46ae33a39a42b3f062bb5e6cbe
 DIST krb5-1.5.3-signed.tar 10106880 RMD160 06effac25b84f0a52a876833730ca03f78d97d15 SHA1 2351004911c7b6ac403232cf6e969c6e430da068 SHA256 f3be0764bbb38f66fa8cc233301bee410c06cb88c40b8af8d0b132dfbb9b3d07
-DIST mit-krb5-1.4.3-patches-0.1.tar.bz2 4271 RMD160 89f4b6bf1d343377e37839d28ac0f401be216e69 SHA1 461b8b968415c0269775d19cd1ea2974c779823a SHA256 e1bd1d4ad64ab34d6eba5a91141a7a0fc94982f0a2db8aa057ae356f7da9c109
 DIST mit-krb5-1.5.3-patches-0.1.tar.bz2 2624 RMD160 a1e5090e07a3e8eb9fe3536f2777585daef017e7 SHA1 fd941240431278705b23c3dd76cc19324dabed54 SHA256 4db7da6a55c7588db00111bde75044947f4ef92bb380096ab33bd60bb3bf1d82
-EBUILD mit-krb5-1.4.3-r3.ebuild 2775 RMD160 dd1bd2d8a3c7d8ce01ccf29e8430132a1241ad70 SHA1 fc59220799af53dff8a0c1db303d35a1e4154a11 SHA256 87ef7aff2603ddd3103d3f959cca3df22d6d0e8b4ba7cdd3b1ec4cc6fb15c8c1
-MD5 b4916a6aeedf72cc52be8066e8ff17f6 mit-krb5-1.4.3-r3.ebuild 2775
-RMD160 dd1bd2d8a3c7d8ce01ccf29e8430132a1241ad70 mit-krb5-1.4.3-r3.ebuild 2775
-SHA256 87ef7aff2603ddd3103d3f959cca3df22d6d0e8b4ba7cdd3b1ec4cc6fb15c8c1 mit-krb5-1.4.3-r3.ebuild 2775
+DIST mit-krb5-1.5.3-patches-0.2.tar.bz2 3095 RMD160 5fc8c41d78f4921e947f68a8d9fb82722e04eb8a SHA1 5916632435d697fa0704251d7653f74559ce7b47 SHA256 8044dbaa17db399c6bea4be671517501c0b528485f8b8b196d75caba559ba9cd
+EBUILD mit-krb5-1.5.3-r1.ebuild 2578 RMD160 a9fc5a14678a4755e51c42c2695339ad458fa002 SHA1 3accdbf6552452e80fb7af48fb13bfe1d4eb54d5 SHA256 81d114d54065601de789ce5a32d6b225153051a86c1a1604e5d108435c22db68
+MD5 b302fd229eba22f08c80f440607cce6d mit-krb5-1.5.3-r1.ebuild 2578
+RMD160 a9fc5a14678a4755e51c42c2695339ad458fa002 mit-krb5-1.5.3-r1.ebuild 2578
+SHA256 81d114d54065601de789ce5a32d6b225153051a86c1a1604e5d108435c22db68 mit-krb5-1.5.3-r1.ebuild 2578
 EBUILD mit-krb5-1.5.3.ebuild 2562 RMD160 e4aecd96a95e5d79c5a9967fec515f3f0e2e6747 SHA1 a6a04f70c00aa63dba8ca225c8ff2202e62ac834 SHA256 a37f069423a630e78a052813029864e82b5140dd742cdd6705ec4b843471da17
 MD5 81e797b8cf881d004be86d4c6196d456 mit-krb5-1.5.3.ebuild 2562
 RMD160 e4aecd96a95e5d79c5a9967fec515f3f0e2e6747 mit-krb5-1.5.3.ebuild 2562
 SHA256 a37f069423a630e78a052813029864e82b5140dd742cdd6705ec4b843471da17 mit-krb5-1.5.3.ebuild 2562
-MISC ChangeLog 27083 RMD160 bab40bba0249bdbcae3e7eca6d2d1fe05b475ba2 SHA1 062fbb58860af7e4a8663088a7abd2bcb711063d SHA256 a084268165f6fa224f37c2bffa53bf93077584637aaf180d8126951b11c59ab1
-MD5 32058b13e719ae56d3ae5d181aed9fa0 ChangeLog 27083
-RMD160 bab40bba0249bdbcae3e7eca6d2d1fe05b475ba2 ChangeLog 27083
-SHA256 a084268165f6fa224f37c2bffa53bf93077584637aaf180d8126951b11c59ab1 ChangeLog 27083
+MISC ChangeLog 27370 RMD160 24e056b4b2cf869277be61b539f0fceb46921bb9 SHA1 7b56b381dd9755409b905656dc4319aba04229e6 SHA256 048336ea3f02e051addfb5364598541bf517c4652c3061feb016947ab4f9650f
+MD5 4563b10532da148828d41e100b7cf742 ChangeLog 27370
+RMD160 24e056b4b2cf869277be61b539f0fceb46921bb9 ChangeLog 27370
+SHA256 048336ea3f02e051addfb5364598541bf517c4652c3061feb016947ab4f9650f ChangeLog 27370
 MISC metadata.xml 241 RMD160 4b15a3aa85942fcbab1c0afa871bd88c85acb001 SHA1 97dc5c2f74beed14ac9e171f36380370afae95be SHA256 119a622b44a5b38856cb9398389cf060f93a077b369161a5ab9a193234af763f
 MD5 f3ea9dd1d52f37139fbc4d101044f821 metadata.xml 241
 RMD160 4b15a3aa85942fcbab1c0afa871bd88c85acb001 metadata.xml 241
 SHA256 119a622b44a5b38856cb9398389cf060f93a077b369161a5ab9a193234af763f metadata.xml 241
-MD5 90bf96b2ef57fc8849e8b046c400bc9c files/digest-mit-krb5-1.4.3-r3 524
-RMD160 293463bcdff3279351fe15e5910d346b0d8b4eb2 files/digest-mit-krb5-1.4.3-r3 524
-SHA256 8958fdc80b15b327341ebff1a82d1577c76d77d2619503903680d640e1f2c404 files/digest-mit-krb5-1.4.3-r3 524
 MD5 735ac439fa0d44026c6b7fe01b769021 files/digest-mit-krb5-1.5.3 527
 RMD160 f9be6bd34c15aa20cf0e8d36030c62ba79dc5968 files/digest-mit-krb5-1.5.3 527
 SHA256 66abd2f045b4cde7cd506407afcde169c5883d0ea5f97cc73b6c1337a4024f3f files/digest-mit-krb5-1.5.3 527
+MD5 caf47565334300103f104c464df34d13 files/digest-mit-krb5-1.5.3-r1 527
+RMD160 751fb9ff5da94f71d226bf850c061271d5156b2a files/digest-mit-krb5-1.5.3-r1 527
+SHA256 ab0762f48b0808647bf636d00812ad55636e84105227bc02e1bb8d5e14424b77 files/digest-mit-krb5-1.5.3-r1 527
