@@ -1,6 +1,0 @@
-MD5 6c805139a4108fbb82fa4adba557a448 krb5-1.4.3-signed.tar 7290880
-RMD160 838425b59bf37da69c927eb346be78d059fa6db7 krb5-1.4.3-signed.tar 7290880
-SHA256 86f246877cc912ae6a82b6bb16217e54ec31fe46ae33a39a42b3f062bb5e6cbe krb5-1.4.3-signed.tar 7290880
-MD5 b369322efbf8387a27d8de67e5b53898 mit-krb5-1.4.3-patches-0.1.tar.bz2 4271
-RMD160 89f4b6bf1d343377e37839d28ac0f401be216e69 mit-krb5-1.4.3-patches-0.1.tar.bz2 4271
-SHA256 e1bd1d4ad64ab34d6eba5a91141a7a0fc94982f0a2db8aa057ae356f7da9c109 mit-krb5-1.4.3-patches-0.1.tar.bz2 4271
