@@ -1,0 +1,6 @@
+MD5 7a58ae9ede67b77792a9fb988545df40 krb5-1.5.3-signed.tar 10106880
+RMD160 06effac25b84f0a52a876833730ca03f78d97d15 krb5-1.5.3-signed.tar 10106880
+SHA256 f3be0764bbb38f66fa8cc233301bee410c06cb88c40b8af8d0b132dfbb9b3d07 krb5-1.5.3-signed.tar 10106880
+MD5 68c1456c4515640321728c69c93c0c0e mit-krb5-1.5.3-patches-0.2.tar.bz2 3095
+RMD160 5fc8c41d78f4921e947f68a8d9fb82722e04eb8a mit-krb5-1.5.3-patches-0.2.tar.bz2 3095
+SHA256 8044dbaa17db399c6bea4be671517501c0b528485f8b8b196d75caba559ba9cd mit-krb5-1.5.3-patches-0.2.tar.bz2 3095
